--- a/site/blueprints/pages/home.yml
+++ b/site/blueprints/pages/home.yml
@@ -1,38 +1,6 @@
 title: Home
-fields:
-  about_title:
-    label: About Title
-    type: text
-  about_text:
-    label: About Text
-    type: textarea
-  last_post_title:
-    label: Latest Post Title
-    type: text
-  last_post_text:
-    label: Latest Post Text
-    type: textarea
-  profiles:
-    label: Profiles
-    type: structure
-    fields:
-      title:
-        label: Title
-        type: text
-      url:
-        label: URL
-        type: url
-      icon:
-        label: Icon
-        type: text
-  questions:
-    label: questions
-    type: repeater
-    fields:
-      question:
-        label: question
-        type: text
-      answer:
-        label: answer
-        type: textarea
-
+sections:
+  children:
+    label: Sections
+    type: pages
+    query: page.children
