--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   },
   "require": {
     "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
-    "getkirby/cms": "^4.0"
+    "getkirby/cms": "^4.0",
+    "google/apiclient": "^2.18"
   },
   "config": {
     "allow-plugins": {
